# corda-cpp-amqp

./: .gitignore  AMQPDescriptor.cxx  AMQPDescriptor.h  AMQPDescriptorRegistory.cxx  CMakeLists.txt  Makefile  README.md  amqp_header.h  amqp_section_id.h  lines  main.cxx  oneInt  proton_wrapper.cxx  proton_wrapper.h  rem_cmake
libs/amqp/: CMakeLists.txt
libs/amqp/include/: AMQPBlob.h  AMQPConfig.h  AMQPHeader.h  CMakeLists.txt  CordaBytes.h  ModifiableAMQPBlob.h
libs/amqp/include/assembler/: CompositeFactory.h  ICompositeFactory.h  ReadNonPrimitive.h  ReadPrimitive.h  SerialiserFactory.h  SerialiserFactoryReaders.h  SerialiserFactoryWriters.h
libs/amqp/include/reader/: IReader.h
libs/amqp/include/schema/: ISchema.h  SchemaDumpTargets.h
libs/amqp/include/serialiser/: CMakeLists.txt  CustomSerializer.h  ISerialiser.h
libs/amqp/include/serialiser/reader/: IReader.h
libs/amqp/include/serialiser/writer/: IWriter.h
libs/amqp/include/serializable/: CMakeLists.txt  ISerializable.h  RestrictedSerializable.h  Serializable.h  SerializableMap.h  SerializableVector.h
libs/amqp/include/test/: .gitignore  CMakeLists.txt  SerializableVectorTests.cxx
libs/amqp/src/: AMQPBlob.cxx  CMakeLists.txt  CordaBytes.cxx  ModifiableAMQPBlob.cxx  ModifiableAMQPBlobImpl.cxx  ModifiableAMQPBlobImpl.h  README.md
libs/amqp/src/assembler/: CMakeLists.txt  CompositeFactory.cxx  CompositeFactory.h  CompositeFactoryInternal.cxx  CompositeFactoryInternal.h  SerialiserFactory.cxx  SerialiserFactoryInternal.cxx  SerialiserFactoryInternal.h
libs/amqp/src/reader/: CompositeReader.cxx  CompositeReader.h  Reader.h
libs/amqp/src/reader/property-readers/: BoolPropertyReader.cxx  BoolPropertyReader.h  DoublePropertyReader.cxx  DoublePropertyReader.h  IntPropertyReader.cxx  IntPropertyReader.h  LongPropertyReader.cxx  LongPropertyReader.h  PropertyReader.h  StringPropertyReader.cxx  StringPropertyReader.h
libs/amqp/src/reader/restricted-readers/: ArrayReader.cxx  ArrayReader.h  EnumReader.cxx  EnumReader.h  ListReader.cxx  ListReader.h  MapReader.cxx  MapReader.h  RestrictedReader.h
libs/amqp/src/schema/: AMQPDescribed.h  AMQPTypeNotation.cxx  AMQPTypeNotation.h  CMakeLists.txt  Descriptors.cxx  OrderedTypeNotations.h  SchemaUtils.cxx  SchemaUtils.h
libs/amqp/src/schema/described-types/: CMakeLists.txt  Choice.h  Composite.cxx  Composite.h  Descriptor.h  Envelope.cxx  Envelope.h  Schema.cxx  Schema.h
libs/amqp/src/schema/described-types/field-types/: ArrayField.cxx  ArrayField.h  CMakeLists.txt  CompositeField.cxx  CompositeField.h  CustomField.cxx  CustomField.h  Field.cxx  Field.h  PrimitiveField.cxx  PrimitiveField.h  RestrictedField.cxx  RestrictedField.h
libs/amqp/src/schema/descriptors/: AMQPDescriptor.cxx  AMQPDescriptor.h  AMQPDescriptorRegistory.cxx  AMQPDescriptors.cxx  AMQPDescriptors.h  CMakeLists.txt  Descriptors.h
libs/amqp/src/schema/descriptors/corda-descriptors/: CMakeLists.txt  ChoiceDescriptor.cxx  ChoiceDescriptor.h  CompositeDescriptor.cxx  CompositeDescriptor.h  EnvelopeDescriptor.cxx  EnvelopeDescriptor.h  FieldDescriptor.cxx  FieldDescriptor.h  ObjectDescriptor.cxx  ObjectDescriptor.h  RestrictedDescriptor.cxx  RestrictedDescriptor.h  SchemaDescriptor.cxx  SchemaDescriptor.h
libs/amqp/src/schema/field-types/: Field.h
libs/amqp/src/schema/restricted-types/: Array.cxx  Array.h  CMakeLists.txt  Enum.cxx  Enum.h  List.cxx  List.h  Map.cxx  Map.h  Restricted.cxx  Restricted.h
libs/amqp/src/serialiser/: CMakeLists.txt  ISerialiser.cxx  PrimToSerializer.h  Serialiser.h  SerialiserFactory.h  SerialiserFactoryInternal.h
libs/amqp/src/serialiser/reader/: CompositeReader.cxx  CompositeReader.h  Reader.cxx  Reader.h
libs/amqp/src/serialiser/serialisers/: CMakeLists.txt  CompositeSerialiser.h  PropertySerialiser.h  RestrictedSerialiser.h  SerialiserFactory.h
libs/amqp/src/serialiser/writer/: Writer.cxx  Writer.h
libs/amqp/src/serializable/: CMakeLists.txt  RestrictedSerializable.cxx  Serializable.cxx
libs/amqp/src/test/: CMakeLists.txt  HeaderTests.cxx  List.cxx  Map.cxx  OrderedTypeNotationTest.cxx  Pair.cxx  RestrictedDescriptor.cxx  RoundTripListTests.cxx  RoundTripTests.cxx  SchemaUtils.cxx  Single.cxx  TestUtils.cxx
libs/amqp/tests/: CMakeLists.txt
libs/amqp/tests/proton-wrapper-link-test/: .gitignore  CMakeLists.txt  proton-wrapper-link-test.cxx
libs/corda-custom-types/: CMakeLists.txt
libs/corda-custom-types/include/java/: CMakeLists.txt
libs/corda-custom-types/include/java/security/: CMakeLists.txt  PublicKey.h  PublicKeySerialiser.h
libs/corda-custom-types/src/java/: CMakeLists.txt
libs/corda-custom-types/src/java/security/: CMakeLists.txt  PublicKey.cxx  PublicKeySerialiser.cxx
libs/corda-utils/: CMakeLists.txt
libs/corda-utils/include/: colours.h  debug.h  types.h
libs/corda-utils/src/: CMakeLists.txt  types.cxx
libs/corda-utils/test/: .gitignore  CMakeLists.txt  TypeTests.cxx
libs/proton-wrapper/: CMakeLists.txt
libs/proton-wrapper/include/: proton_wrapper.h
libs/proton-wrapper/src/: proton_wrapper.cxx
src/amqp/: AMQPDescribed.h  AMQPDescriptor.h  AMQPDescriptorRegistory.cxx  AMQPDescriptorRegistory.h  AMQPHeader.h  AMQPSectionId.h  CMakeLists.txt  CompositeFactory.cxx  Envelope.h
src/amqp/consumer/: CompositeFactory.cxx  CompositeFactory.h  CompositeReader.cxx  CompositeReader.h  PropertyReader.cxx  PropertyReader.h  Reader.cxx  Reader.h  RestrictedReader.cxx  RestrictedReader.h
src/amqp/described/: Envelope.cxx
src/amqp/descriptors/: AMQPDescriptor.cxx  AMQPDescriptorRegistory.cxx  AMQPDescriptorRegistory.h  AMQPDescriptors.cxx  AMQPDescriptors.h
src/amqp/schema/: AMQPTypeNotation.cxx  AMQPTypeNotation.h  Composite.cxx  Composite.h  Descriptor.cxx  Descriptor.h  Envelope.cxx  Envelope.h  Field.cxx  Field.h  OrderedTypeNotations.cxx  OrderedTypeNotations.h  Restricted.cxx  Restricted.h  Schema.cxx  Schema.h
src/amqp/schema/restricted-types/: List.cxx  List.h  Restricted.cxx  Restricted.h
src/amqp/test/: CMakeLists.txt  OrderedTypeNotationTest.cxx  Pair.cxx  Single.cxx  SotedSetTest.cxx  main.cxx
tools/: lines  (+1 more)
(+92 files in other folders)
